# UnrealMathEffect

./: .gitignore  CMakeLists.txt  README.md  build_all.bat  build_run_core.bat  build_run_core.sh  clean_all.bat  clean_all.ps1  configure_all.bat
gui/qt-gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
gui/qt/UnrealMathEffectApp/: CMakeLists.txt  widget.cpp
lib/: CMakeLists.txt  math.cpp  math.hpp
lib/algorithms/: algorithms.cpp  algorithms.hpp
lib/rust_modules/algorithm_lib/: Cargo.toml
lib/rust_modules/diagram_lib/: Cargo.toml
lib/rust_modules/graph_lib/: Cargo.toml
lib/src/: core.cpp
linux/: CMakeLists.txt
macos/: CMakeLists.txt
macos/include/: defines.hpp
src/core/: CMakeLists.txt  main.cpp
src/core/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/core/include/: types.hpp
src/core/include/algebraic/: addition.hpp  division.hpp  linear_functions.hpp  matrix.hpp  multiplication.hpp  subtraction.hpp  vector_operations.hpp
src/core/include/algebraic/rational_functions/: Polynomial.hpp  rational_functions.hpp
src/core/include/mathematical_analysis/: operations.hpp
src/core/src/: main.cpp
src/core/src/algebraic/: addition.cpp  division.cpp  matrix.cpp  multiplication.cpp  subtraction.cpp  vector_operations.cpp
src/core/src/algebraic/rational_functions/: Polynomial.cpp  rational_functions.cpp
src/core/src/geometry/: operations.cpp
src/core/src/mathematical_analysis/: operations.cpp
test/: CMakeLists.txt  main  main.cpp  test.cpp
windows/: CMakeLists.txt  main.cpp
